CIMA_POC/Modulos/pocws/src/main/docker/kubernetes/mspocws-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mspocws-app
  namespace: cima-dev
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: mspocws-app
  template:
    metadata:
      labels:
        fluentd-log-format: "spring-boot"
        app: mspocws-app
      annotations:
        prometheus.io.scrape: "true"
    spec:
      containers:
      - name: mspocws-app
        image: mspocws
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - name: http
          containerPort: 9080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 200
