CIMA_POC/Modulos/pocws/src/main/docker/kubernetes/mspocws-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mspocws-app
  namespace: cima-dev
  labels:
    app: mspocws-app
spec:
  selector:
    app: mspocws-app
  ports:
  - name: http
    port: 9080
